src/objects/Badge_Challenge__c.object
<CustomObject>
    <description>Ties Challenges to Badges.</description>
    <fields>
        <fullName>Badge_Title__c</fullName>
        <formula>Badge__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Badge Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge__c</fullName>
        <label>Badge</label>
        <referenceTo>Badge__c</referenceTo>
        <relationshipLabel>Required Challenges</relationshipLabel>
        <relationshipName>Badge_Challenges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Challenge_Title__c</fullName>
        <formula>Challenge__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Challenge Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge__c</fullName>
        <label>Challenge</label>
        <referenceTo>Challenge__c</referenceTo>
        <relationshipLabel>Included in Badges</relationshipLabel>
        <relationshipName>Badge_Challenges</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tag_Match__c</fullName>
        <description>Optional - a comma-delimited list of &quot;Points.Tag&quot; values, each of which qualify the specified Challenge for this Badge.  For example, a certification-related Badge might require a particular certification challenge, not just &quot;any&quot; certification.</description>
        <inlineHelpText>Optional - a comma-delimited list of &quot;Points.Tag&quot; values, each of which qualify the specified Challenge for this Badge.  For example, a certification-related Badge might require a particular certification challenge, not just &quot;any&quot; certification.</inlineHelpText>
        <label>Tag Match</label>
        <length>32768</length>
        
        <type>LongTextArea</type>
    </fields>
    <label>Badge Challenge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Badge__c</columns>
        <columns>Badge_Title__c</columns>
        <columns>Challenge__c</columns>
        <columns>Challenge_Title__c</columns>
        <columns>Tag_Match__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Name</label>
        
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badge Challenges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>